@@ -302,6 +302,9 @@ ILboolean ilLoadJp2(ILconst_string FileName);
 ILboolean ilLoadJp2F(ILHANDLE File);
 ILboolean ilLoadJp2L(const void *Lump, ILuint Size);
 ILboolean ilLoadJp2LInternal(const void *Lump, ILuint Size, ILimage *Image);
+ILboolean ilSaveJp2(ILconst_string FileName);
+ILboolean ilSaveJp2F(ILHANDLE File);
+ILboolean ilSaveJp2L(const void *Lump, ILuint Size);
 ILboolean ilLoadJpeg(ILconst_string FileName);
 ILboolean ilLoadJpegF(ILHANDLE File);
 ILboolean ilLoadJpegL(const void *Lump, ILuint Size);
